fix: update page title and descriptions for better clarity; localize 'Vite + HeroUI' to reflect feedback management

--- a/client/index.html
+++ b/client/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + HeroUI</title>
-    <meta key="title" content="Vite + HeroUI" property="og:title" />
+    <title>Feedback flow</title>
+    <meta key="title" content="Feedback flow" property="og:title" />
     <meta
-      content="Make beautiful websites regardless of your design experience."
+      content="MAs a tester manage all you feedbacks"
       property="og:description"
     />
     <meta
-      content="Make beautiful websites regardless of your design experience."
+      content="As a tester manage all you feedbacks"
       name="description"
     />
     <meta
