feat: replace favicon and add web app manifest for improved branding and PWA support

--- a/client/index.html
+++ b/client/index.html
@@ -1,28 +1,27 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Feedback flow</title>
-    <meta key="title" content="Feedback flow" property="og:title" />
-    <meta
-      content="MAs a tester manage all you feedbacks"
-      property="og:description"
-    />
-    <meta
-      content="As a tester manage all you feedbacks"
-      name="description"
-    />
-    <meta
-      key="viewport"
-      content="viewport-fit=cover, width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
-      name="viewport"
-    />
-    <link href="/favicon.ico" rel="icon" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Feedback flow</title>
+  <meta key="title" content="Feedback flow" property="og:title" />
+  <meta content="MAs a tester manage all you feedbacks" property="og:description" />
+  <meta content="As a tester manage all you feedbacks" name="description" />
+  <meta key="viewport"
+    content="viewport-fit=cover, width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
+    name="viewport" />
+  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="shortcut icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <link rel="manifest" href="/site.webmanifest" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
