--- a/client/public/404.html
+++ b/client/public/404.html
@@ -26,7 +26,7 @@
         // Single Page Apps for GitHub Pages
         // MIT License
         // https://github.com/rafgraph/spa-github-pages
-        var pathSegmentsToKeep = 0;
+        var pathSegmentsToKeep = 1; // Number of path segments to keep in the URL (1 keeps the repo name)
 
         var l = window.location;
         l.replace(
